<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="4dp"
    android:layout_marginTop="4dp"
    android:layout_marginRight="4dp"
    android:layout_marginBottom="4dp"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?selectableItemBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img_vi_poster"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:scaleType="centerCrop"
            android:layout_gravity="center"
            android:src="@drawable/ic_baseline_local_movies_24"
            android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/txt_vi_movie_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/movie_name" />

        <TextView
            android:id="@+id/txt__vi_release_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_2019" />
    </LinearLayout>
</androidx.cardview.widget.CardView>